--- a/index.css
+++ b/index.css
@@ -1,3 +1,26 @@
-h1{
-    color: blueviolet;
+body{
+    background-color: #DCBEAD;
+    
+}
+.headermain{
+    position: fixed;
+    width: 100%;
+    height: 60px;
+    background-color: #DCBEAD;
+    display: flex; 
+    justify-content: space-between;
+    z-index: 1000; 
+}
+.centre-main{
+    background-color: white;
+    width: 100%;
+    height: 80px;
+    display: flex;
+    padding-top: 50px;
+}
+
+.left-image img{
+    width: 500px;
+    height: 600px;
+    
 }
