--- a/index.css
+++ b/index.css
@@ -2,25 +2,83 @@ body{
     background-color: #DCBEAD;
     
 }
+a{
+    cursor: pointer;
+    text-decoration: none;
+}
 .headermain{
     position: fixed;
     width: 100%;
-    height: 60px;
-    background-color: #DCBEAD;
-    display: flex; 
-    justify-content: space-between;
-    z-index: 1000; 
+    height: 20px;
+    background-color: #DCBEAD;  
 }
-.centre-main{
+.headermain-nav{
+    list-style: none;
+}
+.headermain-nav-ul{
+    list-style: none;
+}
+.headermain-nav-ul-li{
+    display: inline;
+    float: left;
+    
+}
+.headermain-nav-ul-li-a{
+   
+    padding: 0 10px;
+}
+.main{
     background-color: white;
     width: 100%;
-    height: 80px;
+    height: 50px;
     display: flex;
-    padding-top: 50px;
+    flex-wrap: wrap;
+    
+    
+}
+.main-top{
+    width: 100%;
+    height: 80px;
+    background-color: white;
 }
 
-.left-image img{
-    width: 500px;
+.image{
+    position:relative;
+}
+.image1{
+    position: relative;
+    width: 400px;
     height: 600px;
-    
+}
+.image2{
+    position: absolute;
+    top:50px;
+    left: 250px;
+    width: 300px;
+    height: 500px;
+    border-radius: 150px 150px 0 0;
+}
+.main-right{
+    position: relative;
+    left:300px;
+    top: 150px;
+    width: fit-content;
+    height: 30px;
+}
+.main-right h1{
+    color: rgb(141, 59, 59);
+    font-size: 50px;
+}
+.main-right p{
+    color: rgb(141, 59, 59);
+    font-size: 20px;
+}
+.main-right a{
+    font-size: 18px;
+    color: white;
+    display: block;
+    background-color: rgb(141, 59, 59);
+    width: fit-content;
+    padding: 10px 20px;
+    text-decoration: none;
 }
