--- a/index.css
+++ b/index.css
@@ -1,10 +1,17 @@
 body{
     background-color: #DCBEAD;
+    margin: 0;
     
 }
 a{
     cursor: pointer;
     text-decoration: none;
+}
+.header{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
 }
 .headermain{
     position: fixed;
@@ -12,38 +19,47 @@ a{
     height: 20px;
     background-color: #DCBEAD;  
 }
-.headermain-nav{
-    list-style: none;
-}
-.headermain-nav-ul{
-    list-style: none;
-}
-.headermain-nav-ul-li{
-    display: inline;
-    float: left;
+.headermain-top{
+    position: relative;
+    top: 20px;
+    width: 100%;
+    height: 80px;
+    background-color: rgb(245, 241, 241);
     
 }
-.headermain-nav-ul-li-a{
-   
+.headermain-nav{
+    width: 1280px;
+    height: 100%;
+    color: rgb(141, 59, 59);
+    display: flex;
+    flex-direction: row-reverse;   
+    
+}
+.headermain-nav ul{
+    list-style: none;
+    margin-left: 30px;
+       
+}
+.headermain-nav ul li{
+    display: inline;
+}
+.headermain-nav ul li a{
     padding: 0 10px;
+    line-height: 60px;
+    
 }
 .main{
-    background-color: white;
+    
     width: 100%;
     height: 50px;
     display: flex;
-    flex-wrap: wrap;
-    
-    
-}
-.main-top{
-    width: 100%;
-    height: 80px;
-    background-color: white;
+    flex-wrap: wrap;  
 }
 
 .image{
     position:relative;
+    top: 100px;
+    z-index: -10;
 }
 .image1{
     position: relative;
@@ -64,16 +80,23 @@ a{
     top: 150px;
     width: fit-content;
     height: 30px;
+    z-index: -10;
+   
 }
 .main-right h1{
+    
     color: rgb(141, 59, 59);
     font-size: 50px;
 }
 .main-right p{
+    position: relative;
+    top: 80px;
     color: rgb(141, 59, 59);
     font-size: 20px;
 }
 .main-right a{
+    position: relative;
+    top: 100px;
     font-size: 18px;
     color: white;
     display: block;
@@ -81,4 +104,19 @@ a{
     width: fit-content;
     padding: 10px 20px;
     text-decoration: none;
+}
+.main-right-blob{
+    position: relative;
+    background-color: #ed143da3;
+    width: 100px;
+    height: 100px;
+    top: -90px;
+    left: 200px;
+    z-index: -50;
+    border-radius: 30% 70% 70% 30% / 30% 30% 70% 70%;
+    transition: border-radius 500ms ease-in-out;
+    
+}
+.main-right-blob:hover{
+    border-radius: 30% 70% 38% 62% / 73% 67% 33% 27% ;
 }
